Wed Dec 28 12:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Context_Impl_Base.{h,cpp}:
          Readded the default constructor, some compilers need it, no idea
          why, will sort this out later but this at least makes the scoreboard
          less red

Tue Dec 27 15:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Container_Base.{h,cpp}:
        * ciao/Context_Impl_Base.{h,cpp}:
        * ciao/Home_Servant_Impl_Base.{h,cpp}:
        * ciao/Servant_Impl_Base.{h,cpp}:
        * ciao/Swapping_Servant_Home_Impl_Base.{h,cpp}:
        * ciao/Swapping_Servant_Home_Impl_T.h:
          Moved the default constructor to the private section and removed
          the implementation with the assert

Tue Dec 27 15:08:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeApplication/NodeApplication_Core.cpp:
          Initialise pointer with 0

        * DAnCE/NodeApplication/NodeApplication_Impl.{h,cpp,inl}:
          Just declare the default constructor private, it seems not
          to be used and the implementation was incorrect

Fri Dec 23 11:49:04 2005  Gan Deng  <gan.deng@vanderbilt.edu>

	* DAnCE/DomainApplicationManager/Deployment_Configuration.cpp
	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.h
	* DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
	* DAnCE/ExecutionManager/Execution_Manager_Impl.h
	* DAnCE/NodeApplication/NodeApplication_Impl.cpp
	* DAnCE/NodeApplication/NodeApplication_Impl.h
	* DAnCE/NodeApplication/NodeApplication_Impl.inl
	* DAnCE/NodeApplication/RTConfig_Manager.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.inl
	* DAnCE/NodeManager/NodeManager_Impl.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
	* DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp