@@ -1,3 +1,13 @@
+Wed Dec 28 10:42:31 2005  William Otte  <wotte@dre.vanderbilt.edu>
+
+	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
+	* DAnCE/Old_Config_Handlers/DnC_Dump.cpp
+	* tools/Config_Handlers/DnC_Dump.cpp
+	* tools/Config_Handlers/PSPE_Handler.cpp
+
+	Silenced some warnings from
+	Fri Dec 23 11:49:04 2005  Gan Deng  <gan.deng@vanderbilt.edu>
+
 Wed Dec 28 12:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Context_Impl_Base.{h,cpp}:
